# fft-playground

fft_adaptive_mixer/nih_plug_vizia/assets/: theme.css  widgets.css
fft_adaptive_mixer/src/: analyzer_data.rs  editor.rs  lib.rs  main.rs  params.rs  utils.rs
fft_adaptive_mixer/src/editor/: analyzer.rs  param_knob.rs
fft_adaptive_mixer/src/fft_core/: adaptive_mixer.rs  mod.rs  stereo_fft_processor.rs
fft_freeze_new/: Cargo.toml  bundler.toml
fft_freeze_new/src/: editor.rs  lib.rs  main.rs  utils.rs
fft_freeze_new/src/fft_core/: fft_data.rs  fft_freeze.rs  fft_size.rs  mod.rs  stereo_fft_processor.rs
fft_freezer/: Cargo.toml
fft_freezer/src/: analyzer_data.rs  editor.rs  fft_freeze.rs  fft_processor.rs  lib.rs
fft_freezer/src/editor/: analyzer.rs
fft_gate/: Cargo.toml  README.md  bundler.toml
fft_gate/nih_plug_vizia/: Cargo.toml
fft_gate/src/: circ_buf.rs  editor.rs  fft_gate_effect.rs  fft_processor.rs  gate.rs  lib.rs  main.rs  utils.rs
fft_gate/src/fft_core/: stereo_fft_processor.rs
fft_multiband_comp/: Cargo.toml  colors.md
fft_multiband_comp/src/: analyzer_data.rs  editor.rs  lib.rs  main.rs  old_editor.rs  params.rs  utils.rs
fft_peacemaker/: Cargo.toml
fft_peacemaker/src/: editor.rs  fft_processor.rs  lib.rs  main.rs
fft_peacemaker/src/editor/: analyzer.rs  param_knob.rs
fft_peacemaker/src/fft_core/: fft_data.rs  mod.rs  peacemaker.rs  stereo_fft_processor.rs
fft_phasetransfer/: Cargo.toml
fft_phasetransfer/src/: editor.rs  lib.rs  main.rs  utils.rs
fft_test/: Cargo.toml
fft_test/src/: circ_buf.rs  colorizer.rs  fft_processor.rs  main.rs  utils.rs
fft_vst_default/: Cargo.toml
fft_vst_default/src/: analyzer_data.rs  editor.rs  fft_processor.rs  lib.rs  main.rs  utils.rs
python_dsp_test/: bandpass.ipynb  bounce.ipynb  comp.py  compressor_class.py  env_follower.ipynb  env_follower_class.py  fft_comp.ipynb  prezentacja.ipynb
(+18 files in other folders)
